syntax = "proto3";

package v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "admin-item.proto";
//import "google/protobuf/wrappers.proto";

message AdminOrder {
  string id = 1;
  string name = 2;
  string phone = 3;
  string address = 4;
  string payment = 5;
  google.protobuf.Timestamp date = 6;

  repeated AdminItem items = 7;
}

message AdminOrderRequest {
  uint32 id = 1;
}

message AdminOrdersRequest {
  uint32 page = 1;
  uint32 page_size = 2;
  string sort = 3;
  string direction = 4;
}

message AdminDeleteOrderRequest {
  uint32 id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
  string sort = 4;
  string direction = 5;
}

message AdminOrderResponse {
  AdminOrder order = 1;
}

message AdminOrdersResponse {
  repeated AdminOrder orders = 1;
  uint32 total = 2;
}

service AdminOrderService {
  rpc AdminOrder(AdminOrderRequest) returns (AdminOrderResponse);
  rpc AdminOrders(AdminOrdersRequest) returns (AdminOrdersResponse);
  rpc AdminDeleteOrder(AdminDeleteOrderRequest) returns (AdminOrdersResponse);
}
