syntax = "proto3";

package v1;

import "google/protobuf/empty.proto";
import "category.proto";
import "property.proto";
//import "google/protobuf/wrappers.proto";

message Item {
  string id = 1;
  uint32 user_id = 2;
  uint32 vendor_id = 3;
  uint32 parent_id = 4;
  uint32 category_id = 5;
  string title = 6;
  string article = 7;
  string alias = 8;
  string description = 9;
  float price = 10;
  float old_price = 11;
  uint32 currency_id = 12;
  int32 count = 13;
  bool disable = 14;
  uint32 sort = 15;
  string seo_title = 16;
  string seo_description = 17;
  string seo_keywords = 18;

  repeated ItemImage images = 19;
  repeated Item offers = 20;
}

message ItemImage {
  uint32 id = 1;
  uint32 user_id = 2;
  uint32 item_id = 3;
  string filename = 4;
  uint32 sort = 5;
  uint32 property_value_id = 6;
  bool main = 7;
}

message ItemProperty {
  string code = 1;
  repeated uint32 property_value_ids = 2;
}

message ItemRequest {
  uint32 id = 1;
}

message DraftRequest {
  uint32 parent_id = 1;
}

message ItemsRequest {
  uint32 page = 1;
  uint32 page_size = 2;
  string sort = 3;
  string direction = 4;
}

message OffersRequest {
  uint32 item_id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
  string sort = 4;
  string direction = 5;
}

message EditItemRequest {
  uint32 id = 1;
  uint32 parent_id = 2;
  string title = 3;
  string article = 4;
  string alias = 5;
  int32 count = 6;
  string description = 7;
  float price = 8;
  float old_price = 9;
  uint32 currency_id = 10;
  bool disable = 11;
  uint32 sort = 12;
  repeated uint32 item_images = 13;
  repeated uint32 upload_images = 14;
  repeated ItemProperty properties = 15;
}

message DeleteItemRequest {
  uint32 id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
  string sort = 4;
  string direction = 5;
}

message DeleteOfferRequest {
  uint32 id = 1;
  uint32 parent_id = 2;
  uint32 page = 3;
  uint32 page_size = 4;
  string sort = 5;
  string direction = 6;
}

message ItemBindRequest {
  uint32 id = 1;
  string category_id = 2;
}

message UploadOfferRequest {
  string title = 1;
  uint32 parent_id = 2;
  uint32 category_id = 3;
  float price = 4;
  string currency = 5;
  string description = 6;
  repeated string images = 7;
  repeated uint32 properties = 8;
}

message ItemResponse {
  Item item = 1;
}

message ItemsResponse {
  repeated Item items = 1;
  uint32 total = 2;
}

message OffersResponse {
  repeated Item offers = 1;
  uint32 total = 2;
}

message ItemImagesResponse {
  repeated ItemImage images = 1;
}

service ItemService {
  rpc Item(ItemRequest) returns (ItemResponse);
  rpc CreateDraftItem(DraftRequest) returns (ItemResponse);
  rpc EditItem(EditItemRequest) returns (ItemResponse);
  rpc DeleteItem(DeleteItemRequest) returns (ItemsResponse);
  rpc DeleteOffer(DeleteOfferRequest) returns (OffersResponse);
  rpc Items(ItemsRequest) returns (ItemsResponse);
  rpc GetUploadImages(google.protobuf.Empty) returns (ItemImagesResponse);
  rpc ItemCategories(ItemRequest) returns (CategoriesResponse);
  rpc ItemBindCategory(ItemBindRequest) returns (CategoriesResponse);
  rpc ItemUnbindCategory(ItemBindRequest) returns (CategoriesResponse);
  rpc ItemProperties(ItemRequest) returns (PropertiesResponse);
  rpc ItemOffers(OffersRequest) returns (OffersResponse);
  rpc UploadOffer(UploadOfferRequest) returns (ItemResponse);
}
